# users-microservice

./: .dockerignore  .editorconfig  .env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  pr.yml
delvify/: main.py
delvify/api/: helpers.py
delvify/api/v1/: __init__.py  index.py  users.py
delvify/core/: __init__.py  db.py  di.py  logger.py  security.py  settings.py
delvify/crud/: __init__.py  base.py  users.py
delvify/models/: base.py  user.py
delvify/schemas/: __init__.py  jwt.py  user.py
migrations/: env.py
migrations/versions/: e5534a2544df_initial.py
tests/: conftest.py  test_index.py  test_users.py
