[tool.poetry]
name = "users-microservice"
version = "0.1.0"
description = "A microservice to handle user-related requests"
authors = ["AJIJIi <bochkov.alexej@gmail.com>"]
packages = [{ include = "delvify" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
sqlalchemy = "^2.0.18"
pydantic = { extras = ["email"], version = "^2.0.3" }
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"
httpx = "^0.24.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.7"
types-requests = "^2.31.0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
